# practice_2

./: Dockerfile  Procfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.in  requirements.txt
web_service/: app.py
web_service/schemas/: common.py
web_service/views/: common.py
