[tool.poetry]
name = "practice_2"
version = "0.1.0"
description = "Test app for the second lab"
authors = ["kkiforchuk@bcdtriptech.com"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
aiohttp-apispec = "^2.2.1"
marshmallow = "^3.10.0"
gunicorn = "^20.0.4"
honcho = "^1.0.1"
ddtrace = "^0.47.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
